--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "moment": "^2.29.3"
+    "moment": "^2.29.3",
+    "sweetalert2": "^11.4.10"
   },
   "proxy": "http://localhost:8000"
 }
